# Ari

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  index.html  knip.json  package-lock.json  package.json  vite.config.ts
docs/: ADVISOR_SIMULATION_REPORT.md  ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  DEVELOPMENT.md  FEATURES.md  IDE_BRIDGE.md  MANUAL_QA_CHECKLIST.md  METRICS.md  ML.md  MODULES.md  MOOD_ENGINE.md  QA_ACCEPTANCE_REPORT.md  USER_GUIDE.md
evals/: action-safety.json  ari-character.json  initiative-after-ignore.json  initiative-annoyance.json  memory-conflicts.json  privacy-boundaries.json  retrieval-recall.json  technical-help.json
scripts/: fetch-gigachat-certs.mjs  generate-blip-assets.mjs  generate-placeholder-assets.mjs  qa-acceptance.mjs  run-character-tests.mjs  run-retrieval-eval.mjs  run-unit-tests.mjs  smoke-check.mjs  tauri-cli-with-preflight.mjs  validate-sprites.mjs
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gigachat_http.rs  http_fetch.rs  ide_bridge.rs  lib.rs  main.rs  ollama_env.rs  project_companion.rs
tests/: activeWindow.test.ts  activitySignals.test.ts  adviceEngine.test.ts  adviceFinalGate.test.ts  adviceLedger.test.ts  adviceMoveSelector.test.ts  adviceNovelty.test.ts  adviceOutcome.test.ts  advicePipelineFixtures.test.ts  advicePlanner.test.ts  advicePrepareGate.test.ts  adviceSimilarity.test.ts  adviceUrgency.test.ts  advisorContext.test.ts  advisorEngine.test.ts  advisorHypotheses.test.ts  advisorSimulation.test.ts  agentRun.test.ts  ambientThoughts.test.ts  blipBank.test.ts  (+105 more)
(+297 files in other folders)
